--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,56 @@
 *{
     background-color: #e3edf1;
+    color: #195fcf;
 }
 
 body{
     font-family: 'Poppins';
     font-size: 22px;
+}
+
+.nav-links {
+    list-style: none;
+    padding: 0;
+    align-self: flex-end;
+    padding-top: 25px;
+    padding-left: 15px;
+}
+
+.nav-links li {
+    display: inline;
+    margin-right: 20px;
+}
+
+.nav-links a {
+    text-decoration: none;
+}
+
+.header{
+    background-color: #e3edf1;
+    padding: 20px 0;
+    display: flex;
+}
+
+.header-image {
+    max-width: 60%;
+    height: auto;
+    align-self: start;
+}
+
+.home, .services, .contact, .gallery {
+    background-color: #e3edf1;
+    padding: 40px 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header-cat-image {
+    background-image: url('./assets/catHeader.jpg');
+    background-size: cover;
+    height: 400px;
+    width: 100%;
+    margin-top: 10px;
+    opacity: 40%;
 }
