--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,12 @@
 
 #home-h2{
     font-family: 'Poppins';
-    font-size: 30px;
     text-align: center;
     margin-top: 70px;
 }
 
 body{
     font-family: 'Poppins';
-    font-size: 22px;
 }
 
 .nav-links {
@@ -68,4 +66,28 @@ body{
     margin: 0 auto;
     padding-bottom: 60px;
     text-align: center;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+}
+
+#services-ul {
+    list-style: none;
+    font-size: 18px;
+    line-height: 1.5;
+    max-width: 800px;
+    margin: 0 auto;
+    padding-bottom: 40px;
+}
+
+#services-p {
+    font-size: 18px;
+    line-height: 1.5;
+    max-width: 800px;
+    margin: 0 auto;
+    padding-bottom: 40px;
+    text-align: left;
 }
