--- a/styles.css
+++ b/styles.css
@@ -74,13 +74,10 @@ body{
     align-items: left;
 }
 
-#services-ul {
-    list-style: none;
-    font-size: 18px;
-    line-height: 1.5;
-    max-width: 800px;
-    margin: 0 auto;
-    padding-bottom: 40px;
+#services-h2 {
+    font-size: 26px;
+    text-align: center;
+    margin-top: 70px;
 }
 
 #services-p {
