--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,20 @@
-*{
+body{
     background-color: #e3edf1;
     color: #195fcf;
+    font-family: 'Poppins';
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #home-h2{
-    font-family: 'Poppins';
     text-align: center;
     margin-top: 70px;
 }
 
-body{
-    font-family: 'Poppins';
-}
 
 .nav-links {
     list-style: none;
@@ -77,7 +80,7 @@ body{
 #services-h2 {
     font-size: 26px;
     text-align: center;
-    margin-top: 70px;
+    margin-top: 20px;
 }
 
 #services-p {
@@ -87,4 +90,56 @@ body{
     margin: 0 auto;
     padding-bottom: 40px;
     text-align: left;
+}
+
+input[type=text], select, textarea {
+  width: 100%; 
+  padding: 12px; 
+  border: 1px solid #ccc; 
+  border-radius: 4px; 
+  box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 16px; 
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.form-container {
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.contact-container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.contact-main{
+    background-color:#d3e1f8;
+    padding: 40px 20px;
+    text-align: left;
+    display: flex;
+}
+
+#opening-hours {
+    list-style: none;
+    padding: 0;
+}
+
+#opening-hours li {
+    margin-bottom: 5px;
 }
