--- a/styles.css
+++ b/styles.css
@@ -143,3 +143,44 @@ input[type=submit]:hover {
 #opening-hours li {
     margin-bottom: 5px;
 }
+
+.gallery-section {
+  padding: 40px 20px;
+  text-align: center;
+}
+
+.container {
+  margin-bottom: 20px;
+}
+
+.gallery-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+  gap: 20px; 
+  justify-items: center;
+}
+
+div.gallery {
+  background-color: #d3e1f8;
+  border: 3px solid #ffffff;
+  width: 250px; 
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+}
+
+div.gallery img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border: 2px solid #ffffff;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.desc {
+  padding: 10px;
+  text-align: center;
+}
