--- a/styles.css
+++ b/styles.css
@@ -20,17 +20,23 @@ main{
     list-style: none;
     padding: 0;
     align-self: flex-end;
-    padding-top: 25px;
+    padding-top: 18px;
     padding-left: 15px;
 }
 
 .nav-links li {
     display: inline;
-    margin-right: 20px;
+    margin-right: 25px;
+    font-size: 20px;
+    color: #195fcf;
 }
 
 .nav-links a {
     text-decoration: none;
+}
+
+a:visited {
+    color: #195fcf;
 }
 
 .header{
@@ -101,10 +107,11 @@ input[type=text], select, textarea {
   margin-top: 6px; 
   margin-bottom: 16px; 
   resize: vertical;
+  font-family: 'Poppins';
 }
 
 input[type=submit] {
-  background-color: #04AA6D;
+  background-color: #195fcf;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -113,7 +120,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: #154a8c;
 }
 
 .form-container {
@@ -183,4 +190,12 @@ div.gallery:hover {
 div.desc {
   padding: 10px;
   text-align: center;
+}
+
+footer {
+    background-color: #e3edf1;
+    padding: 20px 0;
+    text-align: center;
+    font-size: 14px;
+    color: #195fcf;
 }
